--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta charset="UTF-8" data-theme="light" />
+    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/ck63mKN/pen.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>BlogNest || Where stories unite, ideas ignite</title>
   </head>
   <body>
     <div id="root"></div>
